--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
             <h1>
                 Main Div
             </h1>
-            <div class="secondaryDiv">
-                <button onclick="myfun('prnv')">
+            <div class="firstbutton">
+                <button class="firstbutton" onclick="myfun('prnv')">
                     Click Me
                 </button>
             </div>
+         </div>
+         <div >
+            <button class="subbut subbut2">
+                subscribe
+            </button>
          </div>
          <script>
 
