--- a/index.html
+++ b/index.html
@@ -1,49 +1,28 @@
 <html>
     <head>
-        <title>DAY 1</title>
+        <title>
+            Day 1
+        </title>
         <link rel="stylesheet" href="styles.css">
-        <!-- <style>
-            /* body{
-                background-color: cadetblue;
-                color: blanchedalmond;
-            } */
-             
-        </style> -->
     </head>
     <body>
-         <div class="mainDiv">
+        <div class="mainDiv">
             <h1>
                 Main Div
             </h1>
-            <div class="firstbutton">
-                <button class="firstbutton" onclick="myfun('prnv')">
-                    Click Me
+            <div class="secondDiv">
+                <button class="firstButton" onclick="
+                myFunc('prnv')
+">                      
+                    click 
                 </button>
             </div>
-         </div>
-         <div >
-            <button class="subbut subbut2">
-                subscribe
-            </button>
-         </div>
-         <script>
-
-            // console.log("HI HELLO");
-            // let x=5;
-            // console.log(x);
-            // x=10;
-            // console.log(x);
-            // const pi=3.14;
-            // console.log("Pi =",pi)
-            // let z=1.92;
-            // x='Hello'
-            // console.log(x)
-            // if(9>99){
-            //     console.log("TRUE")
-            // }
-            // else console.log("FALSE")    
-           
-
-         </script>
-    </body>   
+            <div class="thirdDiv">
+                <button class="subBut subButJS" id="subbuto" onclick="changeButton()">
+                    Subscribe
+                </button>
+            </div>
+        </div>
+        <script src="scripts.js"></script>
+    </body>
 </html>
