--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>
@@ -18,7 +19,7 @@
                 </button>
             </div>
             <div class="thirdDiv">
-                <button class="subBut subButJS" id="subbuto" onclick="changeButton()">
+                <button class="subBut subButJS" id="subButton" onclick="changeButton()">
                     Subscribe
                 </button>
             </div>
